...
            .addFlags(Intent.FLAG_ACTIVITY_CLEAR_TOP or Intent.FLAG_ACTIVITY_SINGLE_TOP), PendingIntent.FLAG_IMMUTABLE))
        .addAction(0, getString(R.string.stop_background_connection), PendingIntent.getService(this, 1,
            Intent(this, MessagingService::class.java).setAction(STOP), PendingIntent.FLAG_IMMUTABLE))
        .build()

    companion object {
        const val PREFERENCE = "background-connection"
        private const val STOP = "xyz.tironi.zoen.STOP_CONNECTION"
        fun start(context: Context) { ContextCompat.startForegroundService(context, Intent(context, MessagingService::class.java)) }
        fun stop(context: Context) { context.stopService(Intent(context, MessagingService::class.java)) }
    }
}

